Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1091

jom: preprocessor conditionals not working properly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • Qt Creator 2.0.0
    • Qt Creator 1.3.81 (2.0.0-alpha)
    • Jom
    • None
    • jom 0.9.1

    Description

      There are problems with preprocessor conditionals. The following works:
      X = 1
      !if "$(X)" == "1"
      !message "X=1"
      !else
      !error "X is not 1"
      !endif

      all:

      While the following executes the error statement in addtion to the first message:
      X = 1
      !if "$(X)" == "1"
      !message "X=1"
      !elseif "$(X)" == "2"
      !message "X=2"
      !else
      !error "X is not 1 or 2"
      !endif

      all:

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            jbornema Joerg Bornemann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes