fix else branches of conditionals in PP expressions

Task-number: QTCREATORBUG-1091